# fpkg_uploader

./: Cargo.toml  README.md  flake.nix  main.py  pyproject.toml  setup.py  uploader.py
src/: global.rs  lib.rs  main.rs  models.rs  utilities.rs
