[package]
name = "fpkg_uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.6.1", features = ["default", "derive"]}
dialoguer = {version = "0.12.0", features = ["default"]}
reqwest = { version = "0.13.4", features = ["blocking", "multipart"] }
inquire = "0.9.4"
tar = "0.4"
zstd = { version = "0.13.3", features = ["default", "zstdmt"] }
num_cpus = "1.17.0"